hphp/hack/test/typecheck/ppl/obj_call_not_this.php.exp
File "obj_call_not_this.php", line 10, characters 5-21:
Cannot call a method on an object of a <<__PPL>> class inside a <<__PPL>> class without using $this->method(...) syntax (Typing[4264])
